@startuml
' !pragma layout elk
hide empty members
class ComponentType {
    mapOfPushes
    List<Integer> getPushedFromPinNumber(int)
}

class ComponentInstance <<entity>> {
}

ComponentType "1" -- "*" ComponentInstance

class Pin <<value object>> {
    int pinNumber
}

ComponentInstance "1" - "*" Pin

class Net <<entity>>

Pin "1" -- "start" Net
Pin "1" -- "end" Net
@enduml
